--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="./src/assets/ee8e2ef267a626690ecec7c84a48cfd4.png" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-    <link href = "./src/assets/fonts/stylesheet.css" rel = "stylesheet" type = "text/css" />
-    
+    <link href="./src/assets/fonts/stylesheet.css" rel = "stylesheet" type = "text/css" />
+    <title>Starbucks</title>
 	</head>
 	<body>
 		<div id="root"></div>
